dist/LineScript-win64-20260616/tests/cases/compile_fail/spawn_with_args.lsc
worker(x: i64) -> void do
  println(x)
end

main() -> i64 do
  declare t = spawn(worker(1))
  await(t)
  return 0
end
